--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,8 @@
 {
-    "compilerOptions": {
-      "outDir": "./dist/",
-      "noImplicitAny": true,
-      "module": "es6",
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "target": "es6",
-      "typeRoots": [
-        "node_modules/@types"
-      ],
-      "lib": [
-        "es2017",
-        "dom"
-      ]
+  "compilerOptions": {
+    "module": "es2015",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true
     }
   }
